# eco4cast

./: .gitignore  LICENSE  README.md  blabla.ipynb  co2_model.py  conda_requirements.txt  coutry_points_generator.ipynb  dataset.py  electricitymaps_api.py  environment.yml  google_cloud_vm_moving.ipynb  imagenet_emission.csv  imagenet_train.py  interval_predictor.py  interval_predictor_test.ipynb  model.py  multi_interval_predictor.ipynb  multizone_dataset_creator.ipynb  pyproject.toml  requirements.txt  smart_scheduler_concept.py  smart_scheduler_test.py  tcn.py  test_co2_model.ipynb  tqdm_test.py  train_co2_model.py  utils.py  weather_co2_dataset.py  weather_data_utils.py
compute/: README.md
compute/client_library/: noxfile_config.py  requirements-test.txt
eco4cast/master_machine/: co2_model.py  electricitymaps_api.py  google_cloud_vm_moving.py  interval_predictor.py  master_machine_controller.py  tcn_pytorch.py  weather_data_utils.py
eco4cast/virtual_machine/: smart_scheduler_concept.py
electricitymaps_datasets/: BE_2021_hourly.csv  BE_2022_hourly.csv  BR-CS_2021_hourly.csv  BR-CS_2022_hourly.csv  CA-ON_2021_hourly.csv  CA-ON_2022_hourly.csv  CA-QC_2021_hourly.csv  CA-QC_2022_hourly.csv  CH_2021_hourly.csv  CH_2022_hourly.csv  DE_2021_hourly.csv  DE_2022_hourly.csv  ES_2021_hourly.csv  ES_2022_hourly.csv  FI_2021_hourly.csv  FI_2022_hourly.csv  FR_2021_hourly.csv  FR_2022_hourly.csv  GB_2021_hourly.csv  GB_2022_hourly.csv  IT-NO_2021_hourly.csv  IT-NO_2022_hourly.csv  NL_2021_hourly.csv  NL_2022_hourly.csv  PL_2021_hourly.csv  PL_2022_hourly.csv
examples/: README.md  master_machine_main.py  vm_main.py
examples/ImageNet_google_cloud/: master_machine_main.py  vm_main.py
examples/MNIST_google_cloud/: master_machine_main.py  vm_main.py
examples/eco4cast_demo/: quick_start_guide.ipynb
examples/eco4cast_local_demo/: local_quick_start_guide.ipynb
examples/no_google_cloud_example/: local_main.py
examples/smartscheduler_demo/: quick_start_guide.ipynb  vm_main.py
examples/smartscheduler_demo/.ipynb_checkpoints/: quick_start_guide-checkpoint.ipynb
scheduler_vm_task/: README.md  Tutorial_MNIST.md  google_cloud_example.py  smart_scheduler_concept.py  vm_main.py
scheduler_vm_task/compute/client_library/: README.md  (+2 more)
scheduler_vm_task/master_machine/: __ init __.py  co2_model.py  google_cloud_example.py  google_cloud_vm_moving.py  interval_predictor.py  utils.py
scheduler_vm_task/virtual_machine/: smart_scheduler_concept.py  vm_main.py
smartscheduler/master_machine/: co2_model.py  electricitymaps_api.py  google_cloud_example.py  google_cloud_vm_moving.py  interval_predictor.py  master_machine_controller.py  utils.py  weather_data_utils.py
smartscheduler/virtual_machine/: smart_scheduler_concept.py  utils.py  vm_main.py
(+294 files in other folders)
