[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SmartScheduler"
version = "0.0.4"
description = "some info"
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [{include = "smartscheduler"}]

[tool.poetry.dependencies]
python = "^3.9"
torch =  "^2.0.1"
lightning = "^2.0.2"


apscheduler = {version = "^3.10.1", optional = true }
eco2ai = {version = "^0.3.9", optional = true }

paramiko = {version = "^3.2.0", optional = true }
numpy = {version = "^1.23.5", optional = true }
pandas =  { version = "^1.4.3", optional = true }
scikit-learn = {version = "^1.2.2", optional = true }

[tool.poetry.extras]
virtualmachine = ["apscheduler", "eco2ai"]
mastermachine = ["paramiko", "numpy", "pandas", "scikit-learn"]
