[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "SmartScheduler"
version = "0.0.2"
description = "This package is designed to reduce CO2 emissions while training neural networks using Google Cloud."

authors = ["Mikhail Tiutiulnikov <tiutiulnikov@airi.net>", 
            "Vladimir Lazarev <lazarev@airi.net>", 
            "Aleksei Korovin <korovin@airi.net>",
            "Semen Budennyi <budennyy@airi.net>"]
readme = "README.md"
packages = [{include = "smartscheduler"}]
license = "MIT"
repository = "https://github.com/AIRI-Institute/SmartScheduler"
keywords = ["co2 emission", "google cloud", "pytorch"]

[tool.poetry.dependencies]
python = "^3.9"
torch =  "^2.0.1"
lightning = "^2.0.2"

apscheduler = "^3.10.1"
eco2ai = "^0.3.9"

paramiko = "^3.2.0"
numpy = "^1.23.5"
pandas =  "^1.4.3"
scikit-learn = "^1.2.2"

google-cloud-compute = "^1.11.0"

